Hash token in user file, fix year option